unpackaged/objects/Allergies__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dining Restrictions and Allergies</relationshipLabel>
        <relationshipName>Allergies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <label>Treatment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Allergies</label>
    <nameField>
        <label>Allergies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allergies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>